--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -16,3 +16,9 @@ h1 {
     font-size: 16px;
     text-align: center;
 }
+
+.video {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
