Add camp image section and clean up code

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -22,3 +22,23 @@ h1 {
     justify-content: center;
     align-items: center;
 }
+
+h2 {
+    font-size: 42px;
+    color: white;
+    font-weight: 300;
+    text-align: center;
+}
+
+h3 {
+    font-size: 21px;
+    color: gray;
+    font-weight: normal;
+    text-align: center;
+}
+
+.image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
