Add footer and replace divs with p tags for cleaner/simpler code

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -17,12 +17,6 @@ h1 {
     text-align: center;
 }
 
-.video {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 h2 {
     font-size: 42px;
     color: white;
@@ -37,8 +31,15 @@ h3 {
     text-align: center;
 }
 
-.image {
+p {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.footer {
+    font-size: 21px;
+    color: gray;
+    font-weight: normal;
+    text-align: right;
 }
